// Configuración específica del módulo web-core (v1.1.0)
// Especializado en automatización de pruebas Web UI con Selenium

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

dependencies {
    // ===== DEPENDENCIA PRINCIPAL =====
    // WEB-CORE depende de COMMON (no de API-CORE)
    // Esto mantiene la separación de responsabilidades
    api project(':common')

    // ===== SELENIUM & WEBDRIVER =====
    // Suite completa de Selenium para diferentes navegadores
    api 'org.seleniumhq.selenium:selenium-java:4.27.0'

    // WebDriverManager para gestión automática de drivers
    // (descarga automática de chromedriver, geckodriver, etc.)
    api 'io.github.bonigarcia:webdrivermanager:5.6.2'

    // ===== CUCUMBER PARA BDD =====
    // Cucumber para escribir tests en Gherkin
    api 'io.cucumber:cucumber-java:7.18.0'
    api 'io.cucumber:cucumber-junit-platform-engine:7.18.0'

    // ===== WAITS & UTILITIES =====
    // Awaitility para waits elegantes y fluent assertions
    api 'org.awaitility:awaitility:4.2.0'

    // ===== ASSERTIONS =====
    // AssertJ para assertions fluent
    api 'org.assertj:assertj-core:3.24.2'

    // ===== SCREENSHOT & REPORTING =====
    // AShot para screenshots avanzados (full page, element, etc.)
    api 'ru.yandex.qatools.ashot:ashot:1.5.4'

    // ===== TESTING FRAMEWORKS =====
    // JUnit 5 para tests unitarios de web-core
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
    testImplementation 'org.mockito:mockito-core:5.5.0'

    // ========================================================================
    // NOTA: ExtentReports y TestNG fueron removidos para simplificar.
    // - Usamos Cucumber nativo para reporting
    // - Usamos JUnit Platform (estándar del framework)
    // Si necesitas TestNG o ExtentReports, agrégalos según proyecto específico
    // ========================================================================
    api 'com.fasterxml.jackson.core:jackson-databind:2.15.2'

    // Utilities
    api 'org.apache.commons:commons-lang3:3.13.0'
}

// Nota: La publicación a Maven local está configurada en el build.gradle raíz
// No se requiere configuración adicional aquí para evitar publicaciones duplicadas

// Test configuration
test {
    useJUnitPlatform()

    // Control de logging para tests
    systemProperties = [
        // Log4j2 Control
        'log4j2.configurationFile': 'classpath:log4j2.xml',
        'log4j2.level': 'INFO',
        'log4j2.rootLogger.level': 'INFO',
        'log4j2.statusLoggerLevel': 'WARN',

        // SLF4J Control - Silencia mensaje de inicialización
        'org.slf4j.simpleLogger.defaultLogLevel': 'INFO',
        'slf4j.internal.verbosity': 'ERROR',

        // Apache HTTP Client
        'org.apache.commons.logging.Log': 'org.apache.commons.logging.impl.SimpleLog',
        'httpclient.wire.header': 'INFO',
        'httpclient.wire.content': 'INFO'
    ]

    // JVM Arguments para control de logging
    jvmArgs = [
        '-Dlog4j2.configurationFile=classpath:log4j2.xml',
        '-Dlog4j2.level=INFO',
        '-Dorg.slf4j.simpleLogger.defaultLogLevel=error'
    ]

    testLogging {
        events 'passed', 'skipped', 'failed'
        showStandardStreams = false
        showExceptions = true
        showCauses = true
        showStackTraces = false
        exceptionFormat = 'SHORT'
    }
}

